--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
             <div class="cubecontent">
                 <div id="mainDiv">
                     <div id="boxDiv">
-                        <div id="front"><br>VCR Games</div>
-                        <div id="back">3d Cube</div>
-                        <div id="left">Presents</div>
-                        <div id="right">Tutorial </div>
-                        <div id="top">Thanks for watching</div>
-                        <div id="bottom">Please Subscribe</div>
+                        <div id="front"><br>Steve Martin Tech</div>
+                        <div id="back">Rotating Cube</div>
+                        <div id="left">Here it is</div>
+                        <div id="right">Cube</div>
+                        <div id="top"></div>
+                        <div id="bottom"></div>
                     </div>
                 </div>
             </div>
